metadata/force-app/main/default/objects/CustomName_ktDQt__c/CustomName_ktDQt__c.object-meta.xml
<CustomObject>
    <description>Description_iAKpB</description>
    <label>CustomLabel_qVcTz</label>
    <nameField>
        <label>CustomLabel_qVcTz</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_qVcTzs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>