metadata/force-app/main/default/objects/CustomName_ktDQt__c/fields/CustomField_cKIfa__c.field-meta.xml
<CustomField>
    <fullName>CustomField_cKIfa__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldTVZek</label>
    <length>255</length>
    <type>Text</type>
</CustomField>