metadata/force-app/main/default/objects/CustomName_ktDQt__c/fields/CustomField_xAXBV__c.field-meta.xml
<CustomField>
    <fullName>CustomField_xAXBV__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFielduuXaA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>